@@ -1,3 +1,8 @@
+2004-04-08	blytkerchan
+	* compare_and_exchange.c: add 2004 to the license years
+	* decrement.c: ditto
+	* increment.c: ditto
+
 2004-03-09	blytkerchan
 	* increment.c (atomic_increment): re-implement so it'll work when not optimizing
 	* decrement.c (atomic_decrement): ditto
